Letter Spacing Fix

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -4,8 +4,8 @@
     border: 2px solid;
 }
 
-.hero-text h1 {
-    letter-spacing: normal;
+header.hero .hero-body .hero-text h1 {
+  letter-spacing: normal;
 }
 
 #services, #skills, #contact {
